@@ -1,3 +1,6 @@
+2011-02-22 Heath Harrelson <heath.harrelson@gmail.com>
+	* flexo_archives_widget.php: Possible fix to unbreak PHP4 sites.
+
 2011-02-19 Heath Harrelson <heath.harrelson@gmail.com>
 	* readme.txt: Attempting to fix weirdness in the plugin's page.
 
